working. added elipsis css class

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ header, footer, nav, section, article {
 /*******************
  * Header 
  *******************/
-header, #header {
+#header {
 /*	background: blue; */ 
 	position: relative;
 	overflow: auto;
