--- a/news/news.css
+++ b/news/news.css
@@ -34,13 +34,31 @@ output#rss-feeds {
 }
 
 
+
 .feed-header {
-	font-size: 16pt;
-	color: black;
-	display: inline;
+	overflow: auto;
 }
 
-.feed-action {
+.elipsis {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
+.feed-title {
+	font-size: 16pt;
+	color: black;
+	float: left;
+	padding: 0;
+	margin: 0;
+	width: 275px;
+}
+
+.feed-actions {
+	float: right;
+}
+
+.feed-actions a {
 	font-size: 7pt;
 	border: solid thin gray;
 	padding: 2px;
