--- a/news/news.css
+++ b/news/news.css
@@ -7,7 +7,7 @@
 #news-nav li {
 	padding: 5px 10px;
 	color: black;
-	background: tan;
+	background: gray;
 	cursor: pointer;
 	text-align: center;
 	float: left;
@@ -15,6 +15,10 @@
 	-webkit-border-radius:  10px 10px 0 0;
 	border-radius:  10px 10px 0 0;
 	margin: 0 1px;
+}
+
+#news-nav li.active {
+	background: white;
 }
 
 output#rss-feeds {
