--- a/css/main.css
+++ b/css/main.css
@@ -92,26 +92,50 @@ header, footer, nav, section, article {
 }
 
 /*superfish */
-.sf-menu li.active > a, .sf-menu li.active > a:visited  { /* visited pseudo selector so IE6 applies text colour*/
-	color:			#000;
+.sf-menu {
+    margin-bottom: 0;
 }
-.sf-menu li.active {
-	background:		white;
+.sf-menu ul {
+	box-shadow: 2px 2px 6px rgba(0,0,0,.2);
 }
-/*
-.sf-menu li li {
-	background:		#222;
+.sf-menu a {
+	border-left: 1px solid #fff;
+	border-top: 1px solid #dFeEFF; /* fallback colour must use full shorthand */
+	border-top: 1px solid rgba(255,255,255,.5);
+	color: #FFF;
 }
-.sf-menu li li li {
-	background:		#222;
+.sf-menu li {
+	background: #000;
+}
+.sf-menu ul li {
+	background: #000;
+}
+.sf-menu ul ul li {
+	background: #000;
+}
+.sf-menu li:hover,
+.sf-menu li.sfHover {
+	background: #999;
 }
 
-.sf-menu li:hover, .sf-menu li.sfHover,
-.sf-menu a:focus, .sf-menu a:hover, .sf-menu a:active {
-	background:		#777;
-	outline:		0;
+/* styling for both css and generated arrows */
+.sf-arrows .sf-with-ul:after {
+	/* order of following 3 rules important for fallbacks to work */
+	border: 5px solid transparent;
+	border-top-color: #dFeEFF; /* edit this to suit design (no rgba in IE8) */
+	border-top-color: rgba(255,255,255,.5);
 }
-*/
+.sf-arrows > li > .sf-with-ul:focus:after,
+.sf-arrows > li:hover > .sf-with-ul:after,
+.sf-arrows > .sfHover > .sf-with-ul:after {
+	border-top-color: white; /* IE8 fallback colour */
+}
+/* styling for right-facing arrows */
+.sf-arrows ul .sf-with-ul:after {
+	border-left-color: #dFeEFF; /* edit this to suit design (no rgba in IE8) */
+	border-left-color: rgba(255,255,255,.5);
+}
+
 
 /************ Path, search */
 #top-divider {
