--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ header, footer, nav, section, article {
 	border-left: 1px solid #fff;
 	border-top: 1px solid #dFeEFF; /* fallback colour must use full shorthand */
 	border-top: 1px solid rgba(255,255,255,.5);
-	color: #FFF;
+	color: #FFF !important;
 }
 .sf-menu li {
 	background: #000;
