--- a/css/informedelectorate.css
+++ b/css/informedelectorate.css
@@ -60,11 +60,29 @@ header, footer, nav, section, article {
 #page-title {
   font-family: 'UnifrakturCook', cursive;
   position: absolute;
-  left: 52px;
-  top: 32px;
+  left: 20px;
+  top: 00px;
   color: white;
   font-size: 4em;
   text-shadow: 2px 2px #004; }
+
+#citation {
+  position: absolute;
+  left: 300px;
+  top: 60px;
+  color: black; 
+  background: #B6966D;
+  padding: 2px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  opacity: 0.9;
+}
+
+#citation cite {
+  display: block;
+}
+
 
 #headerTitle {
   position: absolute;
