--- a/css/informedelectorate.css
+++ b/css/informedelectorate.css
@@ -259,6 +259,15 @@ header, footer, nav, section, article {
   vertical-align: top;
   border: 2px solid black; }
 
+#loading {
+  font-size: 2em;
+  text-align: center;
+}
+
+#loading i {
+  font-size: 4em;
+}
+
 /***********************
  * Footer
  **********************/
