- removed application.php - setup.inc.php getting basefileroot from __file__ - news: cleaned up a bit

--- a/news/news.css
+++ b/news/news.css
@@ -89,3 +89,9 @@ output#rss-feeds {
 #resources {
 	clear: both;
 }
+
+#resources .resource {
+	display: inline-block;
+	width: 20em;
+	vertical-align: top;
+}
