pnc: clean up , attaching mif

--- a/pnc/templates/match.html
+++ b/pnc/templates/match.html
@@ -8,10 +8,10 @@ I hope this email finds you well!
 Your Personal Information Form has been matched with United Presbyterian Church in Bloomington, Indiana, in the Presbytery of Ohio Valley.   As the Chair of the Pastor Nominating Committee that will locate our next pastor, we would like to take this opportunity to apprise you of this match by the Church Leadership Connection and our church.   
 </p>
 <p>
-I’ve attached our MIF to this email. Before we consider your name any further, we’d like to know if you are interested in being considered for the position. If you are interested in being considered, we will proceed as outlined below.
+I've attached our MIF to this email. Before we consider your name any further, we'd like to know if you are interested in being considered for the position. If you are interested in being considered, we will proceed as outlined below.
 </p>
 <p>
-The PNC will: 
+The PNC will:
 <ul>
 	<li>receives and reviews PIFs and selects candidates for further consideration</li>
 	<li>arranges for an initial conversation with those persons, conducts reference checks and and 
@@ -26,6 +26,7 @@ Thank you for your time, and blessings to you in your search for your next place
 <p>
 Sincerely,
 Andy Hill
+Chair of PNC, United Presbyterian
 </p>
 </body>
 </html>
