--- a/pnc/templates/referral.html
+++ b/pnc/templates/referral.html
@@ -23,6 +23,7 @@ I ask for your prayers during this process. Please know that our prayers are wit
 <p>
 Sincerely,
 Andy Hill
+Chair of PNC, United Presbyterian
 </p>
 
 </body>
