clean up templates

--- a/pnc/templates/referral.html
+++ b/pnc/templates/referral.html
@@ -2,15 +2,15 @@
 <body>
 Dear [Name],
 
-<p>Thanks you for your interest in United Presbyterian Church, Bloomington, Indiana.  We wish to acknowledge receiving your PIF and would like to tell you about the process that we will use to discern the identity of our next pastor.</p>
+<p>Thank you for your interest in United Presbyterian Church, Bloomington, Indiana.  We wish to acknowledge receiving your PIF and would like to tell you about the process that we will use to discern the identity of our next pastor.</p>
 
 <p>Below is an outline of our process:<br />
-The PNC: 
+The PNC will: 
 <ul>
-	<li>receives and reviews PIFs and selects candidates for further consideration</li>
-	<li>arranges for an initial conversation with those persons, conducts reference checks and and 
-		selects candidates for further consideration</li>
-	<li>conducts further checking as indicated and brings a final pool of candidates to the PNC for its consideration</li>
+	<li>Receive and review PIFs and select candidates for further consideration;</li>
+	<li>Arrange for an initial conversation with those persons, conducts reference checks and and 
+		selects candidates for further consideration;</li>
+	<li>Conduct further checking as indicated and brings a final pool of candidates to the PNC for its consideration.</li>
 </ul>
 </p>
 <p>	
@@ -21,8 +21,8 @@ I ask for your prayers during this process. Please know that our prayers are wit
 </p>
 
 <p>
-Sincerely,
-Andy Hill
+Sincerely,<br />
+Andy Hill<br />
 Chair of PNC, United Presbyterian
 </p>
 
