--- a/pnc/templates/match.html
+++ b/pnc/templates/match.html
@@ -13,10 +13,10 @@ I've attached our MIF to this email. Before we consider your name any further, w
 <p>
 The PNC will:
 <ul>
-	<li>receives and reviews PIFs and selects candidates for further consideration</li>
-	<li>arranges for an initial conversation with those persons, conducts reference checks and and 
-		selects candidates for further consideration</li>
-	<li>conducts further checking as indicated and brings a final pool of candidates to the PNC for its consideration</li>
+	<li>Receive and review PIFs and select candidates for further consideration;</li>
+	<li>Arrange for an initial conversation with those persons, conducts reference checks and and 
+		selects candidates for further consideration;</li>
+	<li>Conduct further checking as indicated and brings a final pool of candidates to the PNC for its consideration.</li>
 </ul>
 </p>
 <p>
@@ -24,8 +24,8 @@ Thank you for your time, and blessings to you in your search for your next place
 </p>
 
 <p>
-Sincerely,
-Andy Hill
+Sincerely,<br />
+Andy Hill<br />
 Chair of PNC, United Presbyterian
 </p>
 </body>
