--- a/pnc/templates/referral.html
+++ b/pnc/templates/referral.html
@@ -2,10 +2,9 @@
 <body>
 Dear [Name],
 
-<p>Thank you for your interest in United Presbyterian Church, Bloomington, Indiana.  We wish to acknowledge receiving your PIF and would like to tell you about the process that we will use to discern the identity of our next pastor.</p>
-
-<p>Below is an outline of our process:<br />
-The PNC will: 
+<p>Thank you for your interest in United Presbyterian Church, Bloomington, Indiana.  We wish to acknowledge receiving your PIF and would like to tell you about the process that we will use to discern the identity of our next pastor.Below is an outline of our process:</p>
+<p>
+The PNC will:
 <ul>
 	<li>Receive and review PIFs and select candidates for further consideration;</li>
 	<li>Arrange for an initial conversation with those persons, conducts reference checks and and 
@@ -14,7 +13,7 @@ The PNC will: 
 </ul>
 </p>
 <p>	
-As we have just begun our work, it may be several weeks before you hear from us again. 
+As we have just begun our work, it may be several weeks before you hear from us again.
 </p>
 <p>
 I ask for your prayers during this process. Please know that our prayers are with you as well in your search for your next place of ministry.
