pnc: template updates

--- a/pnc/templates/referral.html
+++ b/pnc/templates/referral.html
@@ -7,9 +7,9 @@ Dear [Name],
 The PNC will:
 <ul>
 	<li>Receive and review PIFs and select candidates for further consideration;</li>
-	<li>Arrange for an initial conversation with those persons, conducts reference checks and and 
-		selects candidates for further consideration;</li>
-	<li>Conduct further checking as indicated and brings a final pool of candidates to the PNC for its consideration.</li>
+	<li>Arrange for an initial conversation with those persons, conduct reference checks, and 
+		select candidates for further consideration;</li>
+	<li>Conduct further checking as indicated and bring a final pool of candidates to the PNC for its consideration.</li>
 </ul>
 </p>
 <p>	
