--- a/pnc/templates/match.html
+++ b/pnc/templates/match.html
@@ -14,9 +14,9 @@ I've attached our MIF to this email. Before we consider your name any further, w
 The PNC will:
 <ul>
 	<li>Receive and review PIFs and select candidates for further consideration;</li>
-	<li>Arrange for an initial conversation with those persons, conducts reference checks and and 
-		selects candidates for further consideration;</li>
-	<li>Conduct further checking as indicated and brings a final pool of candidates to the PNC for its consideration.</li>
+	<li>Arrange for an initial conversation with those persons, conduct reference checks, and 
+		select candidates for further consideration;</li>
+	<li>Conduct further checking as indicated and bring a final pool of candidates to the PNC for its consideration.</li>
 </ul>
 </p>
 <p>
