working on uploading

--- a/pnc/templates/followup.html
+++ b/pnc/templates/followup.html
@@ -5,7 +5,7 @@ Dear [Name],
 I hope this email finds you well!
 </p>
 <p>
-Last week, we emailed you about a match of your Personal Information Form with United Presbyterian Church in Bloomington, Indiana, in the Presbytery of Ohio Valley. As we have not heard from you, we wanted to follow up shoud you be interested.
+Last week, we emailed you about a match of your Personal Information Form with United Presbyterian Church in Bloomington, Indiana, in the Presbytery of Ohio Valley. As we have not heard from you, we wanted to follow up should you be interested.
 </p>
 <p>
 I've attached our MIF to this email. Before we consider your name any further, we'd like to know if you are interested in being considered for the position. If you are interested in being considered, we will proceed as outlined below.
