clean up production

--- a/pnc/templates/referral.html
+++ b/pnc/templates/referral.html
@@ -13,7 +13,7 @@ The PNC will:
 </ul>
 </p>
 <p>	
-As we have just begun our work, it may be several weeks before you hear from us again.
+As we have many applicants, it may be several weeks before you hear from us again.
 </p>
 <p>
 I ask for your prayers during this process. Please know that our prayers are with you as well in your search for your next place of ministry.
