--- a/css/main.css
+++ b/css/main.css
@@ -15,15 +15,10 @@ a:hover {
 	text-decoration: underline;
 }
 
-/* HTML5 backward compatibility */
-header, footer, nav, section, article {  
-	display:block;  
-}
-
 
 #page {
-	width: 1000px;
-	margin: 0 auto;
+	margin: 2em auto 0 auto;
+	padding: 0;
 	background: #CCC;
 	color: black;
 	-moz-border-radius: 15px;
@@ -35,10 +30,8 @@ header, footer, nav, section, article {
  * Header 
  *******************/
 #header {
-/*	background: blue; */ 
 	position: relative;
 	overflow: auto;
-	margin-top: 2em;
 	padding: 1em;
 }
 /************ Images at top of page */
@@ -53,32 +46,13 @@ header, footer, nav, section, article {
 }
 
 /************ Page title */
-.page-title-base {
-	font: bold 22pt monospace; padding: 5px;
-}
-
 #page-title {
+	font: bold 22pt monospace; padding: 5px;
 	position: absolute; 
-	left: 52px; 
-	top: 82px; 
+	left: 2em; 
+	bottom: 0.5em; 
 	color: #FFF;
-}
-
-#page-title-drop {
-	position: absolute; 
-	left: 54px; 
-	top: 84px; 
-	color: #000;
-}
-
-#headerTitleDrop {
-	position: absolute; left: 2px; top: 2px; color: #FFF;
-		font: italic bold 20pt arial; padding: 5px;
-}
-
-#headerTitle {
-	position: absolute; left: 0px; top: 0px; color: #700;
-		font: italic bold 20pt arial; padding: 5px;
+	text-shadow: 3px 3px 2px gray; 
 }
 
 
@@ -291,4 +265,13 @@ footer {
 	-moz-border-radius: 0 0 15px 15px;
 	-webkit-border-radius: 0 0 15px 15px;
 	border-radius: 0 0 15px 15px;
+}
+
+/*****************
+ * media queries
+ *****************/
+ @media (max-width: 767px) {
+  #img-container {
+    height: 5em;
+  }
 }
