--- a/css/main.css
+++ b/css/main.css
@@ -233,13 +233,11 @@ footer {
 
 		#nav
 		{
-			width: 60em; /* 1000 */
+			/* width: 70em; 1000 */
+			width: 100%;
 			font-family: 'Open Sans', sans-serif;
 			font-weight: 400;
-			position: absolute;
-			top: 25%;
-			left: 50%;
-			margin-left: -30em; /* 30 480 */
+			z-index: 1000;
 		}
 
 			#nav > a
@@ -250,6 +248,7 @@ footer {
 			#nav li
 			{
 				position: relative;
+				list-style: none;
 			}
 				#nav li a
 				{
@@ -281,17 +280,19 @@ footer {
 			{
 				height: 3.75em; /* 60 */
 				background-color: #e15a1f;
+				z-index: 1000;
 			}
 				#nav > ul > li
 				{
-					width: 25%;
+					width: 11%;
 					height: 100%;
 					float: left;
+					z-index: 1000;
 				}
 					#nav > ul > li > a
 					{
 						height: 100%;
-						font-size: 1.5em; /* 24 */
+						font-size: 1em; /* 24 */
 						line-height: 2.5em; /* 60 (24) */
 						text-align: center;
 					}
@@ -327,7 +328,7 @@ footer {
 						}
 						#nav li ul a
 						{
-							font-size: 1.25em; /* 20 */
+							font-size: 0.5em; 
 							border-top: 1px solid #e15a1f;
 							padding: 0.75em; /* 15 (20) */
 						}
