--- a/resume/resume.css
+++ b/resume/resume.css
@@ -8,16 +8,16 @@
   #resume * {
     font-size: 10pt;
     font-family: Verdana, Geneva, sans-serif; }
-  #resume #header-wrapper {
+  #resume .header-wrapper {
     margin: 0 auto;
     padding-bottom: 1em;
     width: 650px; }
-    #resume #header-wrapper #header {
+    #resume .header-wrapper .header {
       text-align: center; }
-      #resume #header-wrapper #header #name {
+      #resume .header-wrapper .header .name {
         font-size: 20pt;
         text-align: left; }
-      #resume #header-wrapper #header #info {
+      #resume .header-wrapper .header .info {
         text-align: center;
         font-size: 8pt;
         font-weight: bold;
@@ -79,3 +79,16 @@
 a, a:visited, a:active {
   color: #990000;
   text-decoration: none; }
+
+@media only screen and ( max-width: 767px )  {
+    #resume .header-wrapper {
+      width: 100%; 
+    }
+  #resume #table .left-col {
+    width: 20%;
+    font-weight: bold; 
+  }
+  #resume #table .right-col {
+    width: 10%; 
+  }    
+}
