--- a/css/main.css
+++ b/css/main.css
@@ -111,10 +111,10 @@ a:hover {
 
 .sidebar {
  	padding: 4px; 
-	margin: 0;
+	margin: 1em 0 0 0;
 	border: solid black medium; 
 	background: white;
-	min-height: 100;
+	min-height: 100px;
 	border-radius: 15px;	
 }
 
