--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8350,3 +8350,106 @@ button.close {
   }
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  background: black;
+  font-family: Verdana, Ariel, sans;
+  font-size: 10pt;
+}
+
+a,
+a:visited,
+a:active {
+  color: #900;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+#app-container {
+  margin-top: 2em;
+  padding: 0;
+  background: #CCC;
+  color: black;
+  border-radius: 15px;
+}
+
+#app-container .app-header {
+  position: relative;
+  overflow: auto;
+  padding: 1em;
+}
+
+#app-container .app-header .img-container {
+  height: 115px;
+  width: 100%;
+  position: relative;
+  background: #444;
+  border-radius: 15px;
+  padding: 10px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#app-container .app-header .page-title {
+  font: bold 22pt monospace;
+  padding: 5px;
+  position: absolute;
+  left: 1em;
+  bottom: 0em;
+  color: #FFF;
+  text-shadow: 3px 3px 2px gray;
+}
+
+#nav ul {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  list-style: none;
+  padding: 0;
+  width: 100%;
+}
+
+#nav ul li {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+#nav ul li a {
+  background-color: black;
+  display: block;
+  color: white;
+  padding: 1em;
+  text-align: center;
+  text-decoration: none;
+}
+
+#nav ul li a:hover {
+  background-color: #999;
+}
+
+#nav ul li.active a {
+  background-color: white;
+  color: black;
+}
+
+/***********************
+ * Footer
+ **********************/
+
+footer {
+  background: #444;
+  color: white;
+  text-align: center;
+  padding: 0.5em;
+  border-radius: 0 0 15px 15px;
+}
+
