resume looking good. routing working

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8414,6 +8414,7 @@ a:hover {
   display: inline-flex;
   list-style: none;
   padding: 0;
+  margin: 0;
   width: 100%;
 }
 
@@ -8427,7 +8428,7 @@ a:hover {
   background-color: black;
   display: block;
   color: white;
-  padding: 1em;
+  padding: 0.5em;
   text-align: center;
   text-decoration: none;
 }
