--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+// @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
 // Variables
 @import "variables";
@@ -55,6 +55,21 @@ a:hover {
 			text-shadow: 3px 3px 2px gray; 				
 		}		
 	}	
+}
+
+.mobile-navbar {
+	display: flex;
+	justify-content: space-between;
+	background-color: black;
+	color: white;
+	.title {
+		padding: 0;
+		margin: 0;
+		font-size: 1.5em;
+	}
+	.button {
+
+	}
 }
 
 #nav {
