--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -36,7 +36,7 @@ a:hover {
 }
 
 h2 {
-	margin-top: 0;
+	margin-top: 0 !important;
 }
 
 #app-container {
@@ -73,6 +73,7 @@ h2 {
 }
 
 .mobile-header {
+	background-color: black;
 	color: white;
 	a {
 		color: white !important;
@@ -95,6 +96,9 @@ h2 {
 		.button {
 			cursor: pointer;
 			font-size: 1em;
+			i {
+				font-size: 1.5em;
+			}
 		}
 	}	
 	ul {
