really fix app background color

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,10 +20,7 @@ body {
 	background: black;
 	font-family: Verdana, Ariel, sans;
 	font-size: 10pt;
-}
-
-#app {
-	background-color: black;
+	background-color: black !important;
 }
 
 #main {
