--- a/resources/assets/js/components/pages/news/news.scss
+++ b/resources/assets/js/components/pages/news/news.scss
@@ -1,4 +1,16 @@
+
+
+
+
 #news {
+	//// promote?
+	.elipsis {
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		display: block;
+	}
+
 	ul.nav {
 		padding: 0;
 		margin: 0;
@@ -19,4 +31,50 @@
 			}
 		}
 	}
+
+	article {
+		border: solid thick gray;
+		padding: 4px;
+		vertical-align: top;
+		border-radius:  20px;
+
+		header {
+			overflow: auto;
+			
+			h3 {
+				font-size: 16pt;
+				color: black;
+				float: left;
+				padding: 0;
+				margin: 0;
+				width: 275px;
+			}
+
+			nav {
+				float: right;
+				font-size: 1.2em;
+				a {
+					padding: 2px;
+				}		
+			}			
+
+		}
+
+		ul {
+			margin: 0;
+			padding: 0;
+			list-style: none !important;
+			background-color: blue;
+		}
+
+
+		.feed-description {
+			//// debugging
+			display: none;
+
+			img {
+				max-width: 100%;
+			}
+		}		
+	}	
 }
