--- a/resources/assets/js/components/pages/inspire/inspire.scss
+++ b/resources/assets/js/components/pages/inspire/inspire.scss
@@ -3,7 +3,7 @@
 
 #inspire {
 	.nav {
-		background-color: white;
+		background-color: #888;
 		padding: 0.5em;
 		border-radius: 0.5em;
 		border: solid black medium;
@@ -12,7 +12,7 @@
 			margin: 0 0 0 0.5em;
 			list-style: none;
 			li ul {
-				background-color: #999;
+				background-color: #AAA;
 				border-radius: 0.5em;
 
 				a.selected {
