--- a/resources/assets/js/components/pages/news/news.scss
+++ b/resources/assets/js/components/pages/news/news.scss
@@ -31,50 +31,52 @@
 			}
 		}
 	}
+	.feeds {
+		margin-top: 1em;
+		article {
+			border: solid thick gray;
+			padding: 4px;
+			vertical-align: top;
+			border-radius:  20px;
 
-	article {
-		border: solid thick gray;
-		padding: 4px;
-		vertical-align: top;
-		border-radius:  20px;
+			header {
+				overflow: auto;
+				
+				h3 {
+					font-size: 16pt;
+					color: black;
+					float: left;
+					padding: 0;
+					margin: 0;
+					width: 275px;
+				}
 
-		header {
-			overflow: auto;
-			
-			h3 {
-				font-size: 16pt;
-				color: black;
-				float: left;
-				padding: 0;
+				nav {
+					float: right;
+					font-size: 1.2em;
+					a {
+						padding: 2px;
+						display: black;
+					}		
+				}			
+
+			}
+
+			ul {
 				margin: 0;
-				width: 275px;
+				padding: 0;
+				list-style: none !important;
 			}
 
-			nav {
-				float: right;
-				font-size: 1.2em;
-				a {
-					padding: 2px;
-				}		
-			}			
 
+			.feed-description {
+				//// debugging
+				display: none;
+
+				img {
+					max-width: 100%;
+				}
+			}		
 		}
-
-		ul {
-			margin: 0;
-			padding: 0;
-			list-style: none !important;
-			background-color: blue;
-		}
-
-
-		.feed-description {
-			//// debugging
-			display: none;
-
-			img {
-				max-width: 100%;
-			}
-		}		
 	}	
 }
