--- a/resources/assets/js/components/pages/news/news.scss
+++ b/resources/assets/js/components/pages/news/news.scss
@@ -26,7 +26,7 @@
 				border-radius: 1em 1em 0 0;
 				
 				&.selected {
-					background-color: white;
+					background-color: white !important;
 				}
 			}
 		}
@@ -56,7 +56,7 @@
 					font-size: 1.2em;
 					a {
 						padding: 2px;
-						display: black;
+						display: black;	
 					}		
 				}			
 
@@ -70,9 +70,6 @@
 
 
 			.feed-description {
-				//// debugging
-				display: none;
-
 				img {
 					max-width: 100%;
 				}
