--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -147,6 +147,7 @@ h2 {
 				text-decoration: none;
 				&:hover {
 					background-color: #999;
+					color: white !important;
 				}
 				&.active {
 					background-color: white;
