news: fix icon color. more cowbell/important

--- a/resources/assets/js/components/pages/news/news.scss
+++ b/resources/assets/js/components/pages/news/news.scss
@@ -63,7 +63,7 @@
 					a {
 						padding: 2px;
 						display: black;	
-						color: white;
+						color: white !important;
 						&:hover {
 							color: white !important;
 						}
