--- a/src/js/components/appview.css
+++ b/src/js/components/appview.css
@@ -4,7 +4,9 @@
   background: black;
   font-family: Verdana, Ariel, sans;
   font-size: 10pt;
-  background-color: black !important; }
+  background-color: black !important;
+  min-height: 100%;
+  height: 100vh; }
 
 #main {
   padding: 1em;
@@ -116,6 +118,19 @@ h2 {
 
 .desktop-header {
   display: none; }
+
+.covers .cover {
+  margin-top: 1em;
+}
+
+.covers .cover .card-body {
+  text-align: center;
+}
+
+.covers a, .covers a:hover, .covers a:visited, .covers a:active {
+  text-decoration: none !important;
+  color: black !important;
+}
 
 /***********************
  * Footer
