--- a/src/js/components/appview.css
+++ b/src/js/components/appview.css
@@ -1,12 +1,10 @@
-.app {
+body {
   margin: 0;
   padding: 0;
-  background: black;
+  background-color: black;
   font-family: Verdana, Ariel, sans;
   font-size: 10pt;
-  background-color: black !important;
-  min-height: 100%;
-  height: 100vh; }
+  min-height: 100%; }
 
 #main {
   padding: 1em;
