--- a/src/js/components/appview.css
+++ b/src/js/components/appview.css
@@ -130,6 +130,11 @@ h2 {
   color: black !important;
 }
 
+.not-found p {
+  padding: 2em;
+  font-size: 2em;
+}
+
 /***********************
  * Footer
  **********************/
