--- a/src/js/components/pages/food/food.scss
+++ b/src/js/components/pages/food/food.scss
@@ -14,3 +14,15 @@
     }
   }
 }
+
+.photo-embed {
+  width: 250px;
+  height: 160px;
+}
+
+@media (min-width: 400px) {
+  .photo-embed {
+    width: 500px;
+    height: 315px;
+  }
+}
